fix alignment

--- a/images/main.css
+++ b/images/main.css
@@ -224,6 +224,7 @@ input.button {
 	color: #FFF;
 	list-style: none;
 	margin: 0; padding: 0;	
+	text-align: right;
 }
 
 
